# ai-microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py  telemetry.py
app/ingestion/: __init__.py  chunking.py  loaders.py  pipeline.py
app/models/: schemas.py
app/services/: __init__.py  fact_lookup.py  guardrails.py  prompts.py  qa_service.py  question_classifier.py  retrieval.py  source_manifest.py  vector_index.py
data/facts/: fact_table.json
data/index/faiss/: index.faiss  index.pkl
data/qna/: sample-queries.md
data/sources/: groww_sources.json  source-list.md
fundintel_rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: extract_facts.py  ingest.py  search_facts.py  test_all_categories.py
tests/: test_guardrails.py  test_schemas.py
