[project]
name = "fundintel-rag-service"
version = "0.1.0"
description = "Production-grade facts-only RAG microservice for mutual fund FAQs."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "orjson>=3.10.0,<4.0.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-community>=0.3.0,<0.4.0",
  "langchain-text-splitters>=0.3.0,<0.4.0",
  "langchain-groq>=0.2.0,<0.3.0",
  "faiss-cpu>=1.9.0,<2.0.0",
  "httpx>=0.27.0,<0.28.0",
  "trafilatura>=1.12.0,<2.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "prometheus-client>=0.21.0,<0.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
